skończona lekcja 5 HTML

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="sheep, animal, wool">
+    <meta name="description" content="I seel best, most beatifull sheeps in Poland">
     <title>lekcja</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-    <h1> MY FIRST WEBPAGE</h1>
+    <h1> Exeol's Sheeps Shop</h1>
     <p> coś tam sobie napiszę ff</p>
 
 
