--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@
 </head>
 <body>
     <h1> Exeol's Sheeps Shop</h1>
-    <p> coś tam sobie napiszę ff</p>
 
 
+    <h1> Test of h1 tag</h1>
+    <p> Welcome in my sheep's shop where I have best
+        choice of sheep, even black ones </p>
+    <p> Welcome in my sheep's shop where I have best <small>choice of sheep,</small> even black ones </p>
+    <p> Welcome in my sheep's shop where I have best <mark>choice of sheep,</mark> even black ones </p>
+    <p> Welcome in my sheep's shop where I have best <sub>choice of sheep,</sub> even black ones </p>
+    <p> Welcome in my sheep's shop where I have best <sup>choice of sheep,</sup> even black ones 10<sup>4</sup> </p>
+    <p> <pre>Welcome in my sheep's shop where I have best
+        choice of sheep, even black ones</pre> </p>
+    <p> Welcome in my sheep's shop where I have best choice of sheep, even black ones </p>
 
+
+    <h2> Test of h2 tag</h2>
+    <h3> Test of h3 tag</h3>
+    <h4> Test of h4 tag</h4>
+    <h5> Test of h5 tag</h5>
+    <h6> Test of h6 tag</h6>
 
 </body>
 </html>
