skończona lekcja 7 HTML

--- a/index.html
+++ b/index.html
@@ -3,15 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="sheep, animal, wool">
-    <meta name="description" content="I seel best, most beatifull sheeps in Poland">
+    <meta name="description" content="I seel best, most beatifull sheep in Poland">
     <title>lekcja</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-    <h1> Exeol's Sheeps Shop</h1>
+    <h1> Exeol's Sheep Shop</h1>
 
 
-    <h1> Test of h1 tag</h1>
+
+    <h2> Normal sheep</h2>
+    <p>Here You can buy all kind of normal sheep</p>
+    <h2> Black sheep</h2>
+    <p> Fresh choice of black sheep</p>
+    <h2> Wool sheep</h2>
+    <p> If You need wool for Your projects just look here</p>
+    <h3> Contact Us</h3>
+    <p> Just cach me in my farm</p>
+    <h3> by phone</h3>
+    <p> I plan to buy phone next year</p>
+
+    <br />
+
+
+
+
+
     <p> Welcome in my sheep's shop where I have best
         choice of sheep, even black ones </p>
     <p> Welcome in my sheep's shop where I have best <small>choice of sheep,</small> even black ones </p>
