--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1> Exeol's Sheep Shop</h1>
 
-
-
+    <img src="img/sheep1.jpg" alt="normal sheep">
+    <br />
     <h2> Normal sheep</h2>
     <p>Here You can buy all kind of normal sheep</p>
     <h2> Black sheep</h2>
