--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
 </head>
 <body>
     <h1> Exeol's Sheep Shop</h1>
+    <div id="top"></div>
 
     <img src="img/sheep1.jpg" alt="normal sheep">
     <br />
     <h2> Normal sheep</h2>
     <p>Here You can buy all kind of normal sheep</p>
+    <a href="prices/sheepprice.html">Price list</a>
     <h2> Black sheep</h2>
     <p> Fresh choice of black sheep</p>
     <h2> Wool sheep</h2>
     <p> If You need wool for Your projects just look here</p>
+    <a href="download/downloadprices.pdf">download full prices list</a>
+    <h2>Political sheep</h2>
+    <a href="http://www.onet.pl"target="_blank">If you interested just look here</a>
     <h3> Contact Us</h3>
-    <p> Just cach me in my farm</p>
+    <p> Just catch me in my farm</p>
+    <a href="contact.html">Here is location</a>
     <h3> by phone</h3>
     <p> I plan to buy phone next year</p>
 
@@ -45,6 +51,8 @@
     <h4> Test of h4 tag</h4>
     <h5> Test of h5 tag</h5>
     <h6> Test of h6 tag</h6>
-
+<br/>
+<br/>
+    <a href="#top">to the top</a>
 </body>
 </html>
