--- a/index.html
+++ b/index.html
@@ -33,18 +33,31 @@
 
 
 
-
-
-    <p> Welcome in my sheep's shop where I have best
-        choice of sheep, even black ones </p>
-    <p> Welcome in my sheep's shop where I have best <small>choice of sheep,</small> even black ones </p>
-    <p> Welcome in my sheep's shop where I have best <mark>choice of sheep,</mark> even black ones </p>
-    <p> Welcome in my sheep's shop where I have best <sub>choice of sheep,</sub> even black ones </p>
-    <p> Welcome in my sheep's shop where I have best <sup>choice of sheep,</sup> even black ones 10<sup>4</sup> </p>
-    <p> <pre>Welcome in my sheep's shop where I have best
-        choice of sheep, even black ones</pre> </p>
-    <p> Welcome in my sheep's shop where I have best choice of sheep, even black ones </p>
-
+    <p>listowanie "ul/li"</p>
+    <ul>
+        <li><p> Welcome in my sheep's shop where I have best choice of sheep, even black ones </p></li>
+        <li><p> Welcome in my sheep's shop where I have best <small>choice of sheep,</small> even black ones </p></li>
+        <li><p> Welcome in my sheep's shop where I have best <mark>choice of sheep,</mark> even black ones </p></li>
+    </ul>
+    <br/>
+    <p>listowanie ol/li</p>
+    <ol>
+        <li><p> Welcome in my sheep's shop where I have best <sub>choice of sheep,</sub> even black ones </p></li>
+        <li><p> Welcome in my sheep's shop where I have best <sup>choice of sheep,</sup> even black ones 10<sup>4</sup> </p></li>
+        <li><p> <pre>Welcome in my sheep's shop where I have best
+            choice of sheep, even black ones</pre> </p></li>
+        <li><p> Welcome in my sheep's shop where I have best choice of sheep, even black ones </p></li>
+    </ol>
+    <br/>
+    <p>listowanie dl/dt/dd</p>
+    <dl></dl>
+    <dp> Przykład nr 1  </dp>
+    <dd>Opis przykładu nr 1 znajduje sie właśnie tutaj</dd>
+    <dp> Przykład nr 2  </dp>
+    <dd>Opis przykładu nr 2 znajduje sie właśnie tutaj</dd>
+    <dp> Przykład nr 3  </dp>
+    <dd>Opis przykładu nr 3 znajduje sie właśnie tutaj</dd>
+    </dl>
 
     <h2> Test of h2 tag</h2>
     <h3> Test of h3 tag</h3>
