--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
     <h2> Wool sheep</h2>
     <p> If You need wool for Your projects just look here</p>
     <a href="download/downloadprices.pdf">download full prices list</a>
+
+    <!-- jak wstawić link do zewnętrznej strony-->
     <h2>Political sheep</h2>
     <a href="http://www.onet.pl"target="_blank">If you interested just look here</a>
+
     <h3> Contact Us</h3>
     <p> Just catch me in my farm</p>
     <a href="contact.html">Here is location</a>
@@ -32,13 +35,15 @@
     <br />
 
 
-
+        <hr>
     <p>listowanie "ul/li"</p>
     <ul>
         <li><p> Welcome in my sheep's shop where I have best choice of sheep, even black ones </p></li>
         <li><p> Welcome in my sheep's shop where I have best <small>choice of sheep,</small> even black ones </p></li>
         <li><p> Welcome in my sheep's shop where I have best <mark>choice of sheep,</mark> even black ones </p></li>
     </ul>
+        <hr>
+
     <br/>
     <p>listowanie ol/li</p>
     <ol>
