--- a/index.html
+++ b/index.html
@@ -12,63 +12,75 @@
     <div id="top"></div>
 
     <img src="img/sheep1.jpg" alt="normal sheep">
-    <br />
-    <h2> Normal sheep</h2>
-    <p>Here You can buy all kind of normal sheep</p>
-    <a href="prices/sheepprice.html">Price list</a>
-    <h2> Black sheep</h2>
-    <p> Fresh choice of black sheep</p>
-    <h2> Wool sheep</h2>
-    <p> If You need wool for Your projects just look here</p>
-    <a href="download/downloadprices.pdf">download full prices list</a>
+    <div>
+        <br />
+        <h2> Normal sheep</h2>
+        <p>Here You can buy all kind of normal sheep</p>
+        <a href="prices/sheepprice.html">Price list</a>
+        <h2> Black sheep</h2>
+        <p> Fresh choice of black sheep</p>
+        <h2> Wool sheep</h2>
+        <p> If You need wool for Your projects just look here</p>
+        <a href="download/downloadprices.pdf">download full prices list</a>
 
-    <!-- jak wstawić link do zewnętrznej strony-->
-    <h2>Political sheep</h2>
-    <a href="http://www.onet.pl"target="_blank">If you interested just look here</a>
+        <!-- jak wstawić link do zewnętrznej strony-->
+        <h2>Political sheep</h2>
+        <a href="http://www.onet.pl"target="_blank">If you interested just look here</a>
+    </div>
 
-    <h3> Contact Us</h3>
-    <p> Just catch me in my farm</p>
-    <a href="contact.html">Here is location</a>
-    <h3> by phone</h3>
-    <p> I plan to buy phone next year</p>
+    <div>
+        <h3> Contact Us</h3>
+        <p> Just catch me in my farm</p>
+        <a href="contact.html">Here is location</a>
+        <h3> by phone</h3>
+        <p> I plan to buy phone next year</p>
 
-    <br />
+        <br />
+    </div>
 
-
+    <div>
         <hr>
-    <p>listowanie "ul/li"</p>
-    <ul>
-        <li><p> Welcome in my sheep's shop where I have best choice of sheep, even black ones </p></li>
-        <li><p> Welcome in my sheep's shop where I have best <small>choice of sheep,</small> even black ones </p></li>
-        <li><p> Welcome in my sheep's shop where I have best <mark>choice of sheep,</mark> even black ones </p></li>
-    </ul>
-        <hr>
+        <p>listowanie "ul/li"</p>
+        <ul>
+            <li><p> Welcome in my sheep's shop where I have best choice of sheep, even black ones </p></li>
+            <li><p> Welcome in my sheep's shop where I have best <small>choice of sheep,</small> even black ones </p></li>
+            <li><p> Welcome in my sheep's shop where I have best <mark>choice of sheep,</mark> even black ones </p></li>
+        </ul>
+    <hr>
+    </div>
 
-    <br/>
-    <p>listowanie ol/li</p>
-    <ol>
-        <li><p> Welcome in my sheep's shop where I have best <sub>choice of sheep,</sub> even black ones </p></li>
-        <li><p> Welcome in my sheep's shop where I have best <sup>choice of sheep,</sup> even black ones 10<sup>4</sup> </p></li>
-        <li><p> <pre>Welcome in my sheep's shop where I have best
-            choice of sheep, even black ones</pre> </p></li>
-        <li><p> Welcome in my sheep's shop where I have best choice of sheep, even black ones </p></li>
-    </ol>
-    <br/>
-    <p>listowanie dl/dt/dd</p>
-    <dl></dl>
-    <dp> Przykład nr 1  </dp>
-    <dd>Opis przykładu nr 1 znajduje sie właśnie tutaj</dd>
-    <dp> Przykład nr 2  </dp>
-    <dd>Opis przykładu nr 2 znajduje sie właśnie tutaj</dd>
-    <dp> Przykład nr 3  </dp>
-    <dd>Opis przykładu nr 3 znajduje sie właśnie tutaj</dd>
-    </dl>
+    <div>
+        <br/>
+        <p>listowanie ol/li</p>
+        <ol>
+            <li><p> Welcome in my sheep's shop where I have best <sub>choice of sheep,</sub> even black ones </p></li>
+            <li><p> Welcome in my sheep's shop where I have best <sup>choice of sheep,</sup> even black ones 10<sup>4</sup> </p></li>
+            <li><p> <pre>Welcome in my sheep's shop where I have best
+                choice of sheep, even black ones</pre> </p></li>
+            <li><p> Welcome in my sheep's shop where I have best choice of sheep, even black ones </p></li>
+        </ol>
+        <br/>
+    </div>
 
-    <h2> Test of h2 tag</h2>
-    <h3> Test of h3 tag</h3>
-    <h4> Test of h4 tag</h4>
-    <h5> Test of h5 tag</h5>
-    <h6> Test of h6 tag</h6>
+    <div>
+        <p>listowanie dl/dt/dd</p>
+        <dl></dl>
+        <dp> Przykład nr 1  </dp>
+        <dd>Opis przykładu nr 1 znajduje sie właśnie tutaj</dd>
+        <dp> Przykład nr 2  </dp>
+        <dd>Opis przykładu nr 2 znajduje sie właśnie tutaj</dd>
+        <dp> Przykład nr 3  </dp>
+        <dd>Opis przykładu nr 3 znajduje sie właśnie tutaj</dd>
+        </dl>
+    </div>
+
+    <div>
+        <h2> Test of h2 tag</h2>
+        <h3> Test of h3 tag</h3>
+        <h4> Test of h4 tag</h4>
+        <h5> Test of h5 tag</h5>
+        <h6> Test of h6 tag</h6>
+    </div>
 <br/>
 <br/>
     <a href="#top">to the top</a>
