--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div id="top"></div>
 
     <img src="img/sheep1.jpg" alt="normal sheep">
-    <div>
+
+    <div id="important">
         <br />
         <h2> Normal sheep</h2>
         <p>Here You can buy all kind of normal sheep</p>
@@ -28,17 +29,28 @@
         <a href="http://www.onet.pl"target="_blank">If you interested just look here</a>
     </div>
 
-    <div>
-        <h3> Contact Us</h3>
-        <p> Just catch me in my farm</p>
-        <a href="contact.html">Here is location</a>
-        <h3> by phone</h3>
-        <p> I plan to buy phone next year</p>
+    <div id="contact-us">
+
+        <div class="contact-method">
+            <h3> Contact Us</h3>
+            <p> Just catch me in my farm</p>
+            <a href="contact.html">Here is location</a>
+        </div>
+
+        <div class="contact-method">
+            <h3> by phone</h3>
+            <p> I plan to buy phone next year</p>
+        </div>
+
+        <div class="contact-method">
+            <h3> via mail</h3>
+            <p> daaaa.. what's that</p>
+        </div>
 
         <br />
     </div>
 
-    <div>
+    <div id="list1">
         <hr>
         <p>listowanie "ul/li"</p>
         <ul>
@@ -49,7 +61,7 @@
     <hr>
     </div>
 
-    <div>
+    <div id="list2">
         <br/>
         <p>listowanie ol/li</p>
         <ol>
@@ -62,7 +74,7 @@
         <br/>
     </div>
 
-    <div>
+    <div id="list3">
         <p>listowanie dl/dt/dd</p>
         <dl></dl>
         <dp> Przykład nr 1  </dp>
@@ -74,7 +86,7 @@
         </dl>
     </div>
 
-    <div>
+    <div id="tagtest">
         <h2> Test of h2 tag</h2>
         <h3> Test of h3 tag</h3>
         <h4> Test of h4 tag</h4>
