--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <meta name="description" content="I seel best, most beatifull sheep in Poland">
     <title>lekcja</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+
+    <!-- metoda CSS implementowania stylu do przykłądowego id important-->
+    <style>
+        #important {
+            color: red;
+
+        }
+
+
+
+    </style>
+
+
 </head>
 <body>
     <h1> Exeol's Sheep Shop</h1>
@@ -85,6 +98,11 @@
         <dd>Opis przykładu nr 3 znajduje sie właśnie tutaj</dd>
         </dl>
     </div>
+
+    <!-- CSS inline style-->
+    <br/>
+    <p style="color: red">przykład</p>
+    <br/>
 
     <div id="tagtest">
         <h2> Test of h2 tag</h2>
