--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
 
         }
 
-
-
     </style>
+
+    <!-- metoda JavaScript odwołania do pliku ze skryptami-->
+    <script src="scripts/main.js"></script>
+
+    <!-- metoda JavaScript implementowania w head-->
+    <script>
+
+        alert("Welcome in my shop sheeplover")
+
+    </script>
+
 
 
 </head>
